# crazyverse

./: .cursorrules  .gitignore  CLAUDE.md  Cargo.toml  README.md
.claude/: settings.json
.claude/agents/: adr-writer.md  port-reviewer.md  researcher.md
.claude/rules/: architecture.md  conventions.md  phase-0.md  ports.md
.claude/skills/adr-create/: SKILL.md
.claude/skills/phase-check/: SKILL.md
.claude/skills/port-audit/: SKILL.md
.claude/skills/research/: SKILL.md
crates/rashk-app/: Cargo.toml
crates/rashk-app/src/: main.rs
crates/rashk-core/: Cargo.toml
crates/rashk-core/src/: capability.rs  error.rs  lib.rs  module.rs  ports.rs  types.rs
crates/rashk-identity/: Cargo.toml
crates/rashk-identity/src/: keypair.rs  lib.rs
crates/rashk-mesh/: Cargo.toml
crates/rashk-mesh/src/: lib.rs  quic.rs
crates/rashk-store/: Cargo.toml
crates/rashk-store/src/: lib.rs  sqlite.rs
crates/rashk-wasm/: Cargo.toml
crates/rashk-wasm/src/: host.rs  lib.rs
crates/rashk-wasm/wit/: module.wit
docs/: MASTER_PLAN.md
docs/design/: domain-model.md  full-stack.md  master-plan-v2-proposal.md  open-source-mapping.md  scaffold-review.md  universe.md  vision.md
docs/references/: README.md  agave.md  claude-code.md  n8n.md  porting-roadmap.md  supabase.md  tailscale.md  tauri.md  ton.md
docs/research/: P1-wasm-component-model.md  P10-marketplace-economics.md  P11-did-methods.md  P2-solana-escrow-marketplace.md  P3-cr-sqlite-readiness.md  P4-headscale-wireguard-mesh.md  P5-telegram-mini-apps.md  P6-agent-economy.md  P7-multi-chain-wallet.md  P8-chromium-fork.md  P9-nixos-appliance.md  prompts.md
frontend/src/routes/dept/[id]/events/: +page.svelte
