[package]
name = "rashk-app"
description = "Rashk binary: composition root, CLI, runtime bootstrap"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "rashk"
path = "src/main.rs"

[dependencies]
rashk-core = { path = "../rashk-core" }
rashk-store = { path = "../rashk-store" }
rashk-wasm = { path = "../rashk-wasm" }
rashk-mesh = { path = "../rashk-mesh" }
rashk-identity = { path = "../rashk-identity" }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
dirs = { workspace = true }
hex = { workspace = true }
