[package]
name = "rashk-identity"
description = "Identity: local keypair, DID, module signing, verifiable credentials"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rashk-core = { path = "../rashk-core" }
async-trait = { workspace = true }
serde_json = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
