[package]
name = "rashk-mesh"
description = "Mesh networking: P2P discovery, encrypted tunnels, remote port proxying"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rashk-core = { path = "../rashk-core" }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
