[package]
name = "rashk-store"
description = "Storage adapters: SQLite + cr-sqlite CRDT sync"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rashk-core = { path = "../rashk-core" }
async-trait = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
serde_json = { workspace = true }
